<resources>
    <string name="app_name">RestaurantAssistant</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_poker">POKER</string>
    <string name="button_menus">RESTAURANT</string>
    <string name="button_menu">MENU</string>
    <string name="button_drinks">DRINKS</string>
    <string name="button_waiter">CALL WAITER</string>
    <string name="button_bill">VIEW BILL</string>
    <string name="button_wifi">USE WIFI</string>
    <string name="button_bluetooth">USE BLUETOOTH</string>
    <string name="button_player1">PLAYER 1</string>
    <string name="button_player2">PLAYER 2</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_food_menu">FoodMenu</string>
    <string name="action_settings">Settings</string>
    <string name="exit">exit</string>
    <string name="order">ORDER</string>

    //textViews
    <string name="app_name2">Poker</string>
    <string name="choose_network">Please select a network connection:</string>
    <string name="opponent_bet">OPPONENT\'S BET:</string>
    <string name="current_bet">CURRENT BET:</string>
    <string name="wallet">Wallet:</string>
    <string name="hello_world">Hello world! Welcome to my app!</string>
    <string name="current_turn">TURN:</string>
    <string name="total_pot">TOTAL POT:</string>
    <string name="new_game">New Game</string>
    //buttons
    <string name="b_wifi">WiFi</string>
    <string name="b_bluetooth">Bluetooth</string>
    <string name="b_player_1">Player 1</string>
    <string name="b_player_2">Player 2</string>
    <string name="b_call">Call</string>
    <string name="b_check">Check</string>
    <string name="b_raise">Raise(50)</string>
    <string name="b_raise_high">Raise(100)</string>
    <string name="b_fold">Fold</string>
    <string name="title_activity_second_actvity">SecondActvity</string>
    <string name="title_activity_second">SecondActivity</string>

    <!-- string arrays -->
    <string-array name="food_categories">
        <item>APPETIZERS</item>
        <item>BURGERS</item>
        <item>SANDWICHES</item>
        <item>DESSERTS</item>
    </string-array>
    <string-array name="appetizers">
        <item>Cheese Sticks</item>
        <item>Mini Corn Dogs</item>
        <item>Chips and Salsa</item>
        <item>Jalapeno Poppers</item>
        <item>Fried Mushrooms</item>
        <item>Toothpicks</item>
        <item>Hot Wings</item>
        <item>Cheese Fries</item>
        <item>Fried Pickle Spears</item>
    </string-array>
    <string-array name="burgers">
        <item>Classic Cheeseburger</item>
        <item>Sunny Side Burger</item>
        <item>Short Rib Sliders</item>
        <item>Grilled Chicken</item>
        <item>Buffalo Chicken</item>
        <item>Fried Chicken</item>
    </string-array>
    <string-array name="sandwiches">
        <item>BLT</item>
        <item>Club</item>
        <item>Philly Cheese Steak</item>
        <item>Turkey Melt</item>
    </string-array>
    <string-array name="desserts">
        <item>Chocolate Cake</item>
        <item>Cheese Cake</item>
        <item>Ice Cream</item>
        <item>Banana Cream Pie</item>
        <item>Tiramisu</item>
    </string-array>

    <string-array name="drink_categories">
        <item>SOFT DRINKS</item>
        <item>COCKTAILS</item>
        <item>BEER</item>
        <item>WINE</item>
        <item>WHISKEY</item>
    </string-array>
    <string-array name="soft_drinks">
        <item>Coke</item>
        <item>Diet Coke</item>
        <item>Sprite</item>
        <item>Root Beer</item>
        <item>Iced Tea</item>
    </string-array>
    <string-array name="cocktails">
        <item>Appletini</item>
        <item>Hawaiian Sunset</item>
        <item>Dark Side of the Moon</item>
        <item>Baja Breeze</item>
        <item>French Negroni</item>
    </string-array>
    <string-array name="beer">
        <item>Corona</item>
        <item>Budweiser</item>
        <item>Bud Light</item>
        <item>Shock Top</item>
        <item>Blue Moon</item>
        <item>Lagunitas IPA</item>
        <item>Stella Artois</item>
    </string-array>
    <string-array name="wine">
        <item>Ruffino Prosecco Veneto</item>
        <item>Rosatello Rose, Italy</item>
        <item>Ruffino Lumina Pinot Grigio, Italy</item>
        <item>Nobilo Suavignon Blanc</item>
        <item>Franciscan Chardonnay</item>
        <item>Hogue Merlot</item>
        <item>Dreaming Tree Pinot Noir</item>
    </string-array>
    <string-array name="whiskey">
        <item>Jack Daniels</item>
        <item>Angel\'s Envy Rye</item>
        <item>Lock Stock &amp; Smoking Barrel</item>
        <item>Jameson</item>
        <item>Pappy Van Winkle</item>
        <item>Johnny Walker</item>
    </string-array>

</resources>
