<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/welcome_button_wifi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/wifi"
        android:contentDescription="@string/button_bluetooth"
        android:background="@null"
        android:text="@string/b_wifi"
        style="?android:attr/borderlessButtonStyle" />

    <ImageButton
        android:id="@+id/welcome_button_bluetooth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bluetooth"
        android:contentDescription="@string/button_wifi"
        android:background="@null"
        android:text="@string/b_bluetooth"
        style="?android:attr/borderlessButtonStyle" />
</LinearLayout>

